src/test/ui/nll/return-ref-mut-issue-46557.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/return-ref-mut-issue-46557.rs:19:21
   |
19 |     let ref mut x = 1234543; //~ ERROR borrowed value does not live long enough [E0597]
   |                     ^^^^^^^ temporary value does not live long enough
20 |     x
21 | }
   |  - temporary value only lives until here
   |
   = note: borrowed value must be valid for lifetime '_#2r...

error: aborting due to previous error

